--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+nav {
+  padding: .7rem 1.5rem;
+  border-bottom: 1px solid #fff;
+  margin-bottom: 1rem;
+  font-size: 1.6rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.home-container {
+  padding: 0 2rem;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 1fr;
+  gap: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.post {
+  border: 1px solid blue;
+  padding: .32px .32rem .5rem;
+  
+}
+.post>img {
+  width: 100%;
+  
+}
+.post>p,
+.post>h3 {
+  padding: 0 .5rem;
+  opacity: 0.5;
+}
+.post>p {
+  font-size: 1.2rem;
+  margin: 0.3rem 0;
+}
+.post>h3 {
+  font-size: 1.6rem;
+  margin: .5rem 0 .7rem;
+}
+
+/* Details Page styling starts */
+.details-container {
+  padding: 0 2rem;
+}
+.details-container>h2 {
+  font-size: 1.8rem;
+}
+.details-container>img {
+  width: 300px;
+  margin: 1rem 0;
+ 
+}
+.details-container>h3 {
+  font-size: 1.9rem;
+  margin: 0.5rem 0;
+}
+.details-container>p {
+  font-size: 1.9rem;
+}
+
+@media screen and (max-width: 992px) {
+  .home-container {
+      grid-template-columns: repeat(4, 1fr);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 768px) {
+  .home-container {
+      grid-template-columns: repeat(2, 1fr);
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 576px) {
+  .home-container {
+      grid-template-columns: 1fr;
   }
 }
